test/fail/move_self_args.rs
#[objective::objective]
trait Test {
    fn test(self, a: A, b: B, c: C) -> D;
}

fn main() {}
