test/fail/move_self_args.stderr
error: All trait methods must accept &self or &mut self
 --> test/fail/move_self_args.rs:3:13
  |
3 |     fn test(self, a: A, b: B, c: C) -> D;
  |             ^^^^
